--- a/.prettierrc
+++ b/.prettierrc
@@ -1,18 +1,28 @@
 {
-	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
-	"plugins": [
-		"prettier-plugin-svelte",
-		"prettier-plugin-tailwindcss"
-	],
-	"overrides": [
-		{
-			"files": "*.svelte",
-			"options": {
-				"parser": "svelte"
-			}
-		}
-	]
+  "useTabs": true,
+  "tabWidth": 2,
+		"semi": true,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "singleAttributePerLine": false,
+  "printWidth": 10000,
+		"endOfLine": "lf",
+		"bracketSpacing": true,
+		"arrowParens": "avoid",
+		"quoteProps": "as-needed",
+		"embeddedLanguageFormatting": "auto",
+		"proseWrap": "preserve",
+		"jsxSingleQuote": false,
+		"svelteSortOrder": "scripts-options-styles-markup",
+  "plugins": [
+    "prettier-plugin-svelte"
+  ],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ]
 }
